Projects for Submission/Project3_NYC311/.nbgrader.log
[NotebookApp | ERROR] Exception while loading config file /etc/jupyter/nbgrader_config.py
    Traceback (most recent call last):
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/application.py", line 562, in _load_config_files
        config = loader.load_config()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 457, in load_config
        self._read_file_as_dict()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 489, in _read_file_as_dict
        py3compat.execfile(conf_filename, namespace)
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/ipython_genutils/py3compat.py", line 198, in execfile
        exec(compiler(f.read(), fname, 'exec'), glob, loc)
      File "/etc/jupyter/nbgrader_config.py", line 29
        "C++14": "// your code here\nthrow new Error();"
               ^
    SyntaxError: invalid syntax
[NotebookApp | INFO] Loading the validate_assignment nbgrader serverextension
[NotebookApp | INFO] nteract extension loaded from /home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/nteract_on_jupyter
[NotebookApp | INFO] Serving notebooks from local directory: /home/hp/workfolder/simplilearn/Projects for Submission/Project3_NYC311
[NotebookApp | INFO] The Jupyter Notebook is running at:
[NotebookApp | INFO] http://localhost:8888/?token=d37e712595f7c03ddc9dd8d5cd615453e4ced796983ffe67
[NotebookApp | INFO] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).
[NotebookApp | CRITICAL] 
    
    Copy/paste this URL into your browser when you connect for the first time,
    to login with a token:
        http://localhost:8888/?token=d37e712595f7c03ddc9dd8d5cd615453e4ced796983ffe67
[NotebookApp | INFO] Accepting one-time-token-authenticated connection from 127.0.0.1
[NotebookApp | WARNING] Notebook Project 3.ipynb is not trusted
[NotebookApp | INFO] Kernel started: d5a29803-f70a-42e7-a568-86634e88ff3d
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel d5a29803-f70a-42e7-a568-86634e88ff3d
[NotebookApp | INFO] Saving file at /Project 3.ipynb
[NotebookApp | INFO] Saving file at /Project 3.ipynb
[NotebookApp | INFO] Saving file at /Project 3.ipynb
[NotebookApp | INFO] Saving file at /Project 3.ipynb
[NotebookApp | INFO] Starting buffering for d5a29803-f70a-42e7-a568-86634e88ff3d:f7ea2fd959234e728845ea2f4db1ccb6
[NotebookApp | INFO] interrupted
[NotebookApp | CRITICAL] Shutdown confirmed
[NotebookApp | INFO] Shutting down 1 kernel
[NotebookApp | INFO] Kernel shutdown: d5a29803-f70a-42e7-a568-86634e88ff3d
